plugins/kotlin/idea/tests/testData/highlighterMetaInfo/Todo.kt.highlighting
// FIR_IDENTICAL
// <!HIGHLIGHTING("descr='TODO This is a todo in line comment'")!>TODO This is a todo in line comment<!>

/* <!HIGHLIGHTING("descr='TODO This is a todo in block comment '")!>TODO This is a todo in block comment <!>*/

/**
 * <!HIGHLIGHTING("descr='TODO This is a todo in KDoc'")!>TODO This is a todo in KDoc<!>
 */

//<!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'")!>todo: This is<!>
// <!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'")!>multiline td<!>
/* <!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'")!>and even longer<!>
   <!HIGHLIGHTING("descr='todo: This is multiline td and even longer up to this line'")!>up to this line<!>
 */

/**
 * <!HIGHLIGHTING("descr='todo: This is multiline td'")!>todo: This is<!>
 *  <!HIGHLIGHTING("descr='todo: This is multiline td'")!>multiline td<!>
 */

//<!HIGHLIGHTING("descr='todo: This is'")!>todo: This is<!>
//single line td

/**
 * <!HIGHLIGHTING("descr='todo: This is'")!>todo: This is<!>
 * single line td also
 */
